# MicSE-Public

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  Vagrantfile  bootstrap.sh  dune-project  micse-s.opam  micse.opam  package.json  parse.py  testMich.sh
benchmarks/evaluation/: KT18dDtdzvEj3Y9okKJxASMCyWfSscRfjtbP.storage.tz  KT1AKNCvvGN8QEiL6bd8UHDXq4tmiNRsKYs9.storage.tz  KT1AKNCvvGN8QEiL6bd8UHDXq4tmiNRsKYs9.tz  KT1AbYeDbjjcAnV1QK7EZUUdqku77CdkTuv6.tz  KT1Ag29Dotu8iEigVrCARu7jmW5gkF1RyHUB.tz  KT1ArrDG6dXqgvTH5RcyYFy4TmShG1MWajSr.storage.tz  KT1B2GSe47rcMCZTRk294havTpyJ36JbgdeB.tz  KT1BZyfCcgMRb7gniyyM6iobEYVQc9vECGua.storage.tz  KT1BZyfCcgMRb7gniyyM6iobEYVQc9vECGua.tz  KT1BzkCjvNf4tgPjPHMNFTfe2UpU1JzCrXiV.storage.tz  KT1BzkCjvNf4tgPjPHMNFTfe2UpU1JzCrXiV.tz  KT1C4rP4S7XeP5oVwZumxpR3hcxHSEN2MV9U.storage.tz  KT1Ep5RX2VVyP7zD3kYhEzJyJgfb8oBSUv2H.tz  (+19 more)
cmd/: .merlin 3  baseline.ml  check_grammar.ml  dune  enhanced_prover.ml  galb_mod_mono_refute.ml  galb_mod_mono_target.ml  galb_mod_naive_refute.ml  galb_mod_refute.ml  galb_mod_target.ml  galb_rft.ml  galb_sat.ml  galb_target.ml  galb_tmpl.ml  galbpc.ml  get_query_locs.ml  main.ml  micse.ml
doc/: Benchmark.md  Installation.md  Usage.md
lib/: .merlin 3  coop.ml  coop.mli  dune  execFlow_s.ml  inv.ml  lib.ml  lib_s.ml  manage_s.ml  manage_s.mli  refuter_score.ml  refuter_score.mli  tzUtil.ml
script/: benchmark.py  benchmark_mligo_smartpy.py  micse_env.py  micse_main.py  micse_post.py  micse_run.py  micse_taq.sh  parse.py  table2.py  testMich.sh
test/: .merlin 3  dune  integ_test_s.ml  test_s.ml
(+91 files in other folders)
